[gd_scene load_steps=4 format=3 uid="uid://bb1hfx6qp2nul"]

[ext_resource type="Script" uid="uid://c1c5qxijaeyth" path="res://ui/screen_ui/pause_menu/pause_menu.gd" id="1_b4b0p"]
[ext_resource type="PackedScene" uid="uid://bro7uo2viqqx3" path="res://ui/screen_ui/elements/panel_container_wrapper.tscn" id="2_53lsw"]
[ext_resource type="PackedScene" uid="uid://wt1hrs7civkc" path="res://ui/screen_ui/elements/screen_button.tscn" id="3_fh0kl"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_b4b0p")

[node name="PanelContainerWrapper" parent="." instance=ExtResource("2_53lsw")]
layout_mode = 1
offset_left = -69.0
offset_top = -97.0
offset_right = 69.0
offset_bottom = 97.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainerWrapper"]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainerWrapper/MarginContainer"]
layout_mode = 2

[node name="ResumeButton" parent="PanelContainerWrapper/MarginContainer/VBoxContainer" instance=ExtResource("3_fh0kl")]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="SettingsButton" parent="PanelContainerWrapper/MarginContainer/VBoxContainer" instance=ExtResource("3_fh0kl")]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="SaveButton" parent="PanelContainerWrapper/MarginContainer/VBoxContainer" instance=ExtResource("3_fh0kl")]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="LoadButton" parent="PanelContainerWrapper/MarginContainer/VBoxContainer" instance=ExtResource("3_fh0kl")]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="MainMenuButton" parent="PanelContainerWrapper/MarginContainer/VBoxContainer" instance=ExtResource("3_fh0kl")]
unique_name_in_owner = true
layout_mode = 2
text = "Exit to Main Menu"

[node name="QuitGameButton" parent="PanelContainerWrapper/MarginContainer/VBoxContainer" instance=ExtResource("3_fh0kl")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Desktop"
